--- a/Client/style.css
+++ b/Client/style.css
@@ -24,17 +24,26 @@ button#button_one:hover{
 button#button_contact{
     /*padding:0.3em 1.2em;
     margin:0 0.3em 0.3em 0;*/
-    border-radius:0em;
-    border: 0;
+    border-radius:10px;
+    border: 2px solid black;
     text-decoration:none;
     font-family:'Roboto',sans-serif;
     font-weight:300;
     color:black;
-    background:#999999;
+    background:#c0c0c0;
+    font-size: large;
+    min-width: 200px;
+    margin: 2px;
+    margin-left: 10px;
+    margin-right: 10px;
+
+    
+
     /*transition: all 0.2s;*/
     }
 button#button_contact:hover{
     background:#5c5c5c;
+    color: rgb(207, 205, 205);
     }  
     
 button#alert_button{
@@ -58,12 +67,34 @@ window{
     background: #333333;
 }
 
+box{
+    padding: 5px;
+
+}
 label#white_label{
     color: white;
+}
+label#white_label_contact{
+    color: black;
+    border: white solid 2px;
+    border-radius: 10px;
+    background-color: #9e9e9e;
+    font-size: large;
+    margin: 2px;
+    padding: 3px;
+
+}
+
+label#white_label_title{
+    color: white;
+    font-weight: bold;
+    font-size: xx-large;
+    text-decoration: underline;
 }
 
 #message_list{
     background: #5c5c5c;
+    
 }
 
 
@@ -73,6 +104,8 @@ label#message_come{
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
     border-radius: 10px;
+    padding: 5px;
+    margin: 5px;
     color: white;
   
 }
@@ -110,7 +143,8 @@ label#message_out{
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
     border-radius: 10px;
-
+    padding: 5px;
+    margin: 5px;
     color: white;
     background: rgb(57, 165, 57);
 }
